Project grading_app {
  database_type: 'sqlite'
  Note: 'CS 611 Final Project'
}

Table users {
  id int [primary key]
  name text
  email text
  password_hash text
  role int
  created_at timestamp
  last_updated timestamp
}

Table courses {
  id int [primary key]
  course_template_id int [ref: > course_templates.id]
  name text
  active bool
}

Table course_templates {
  id int [primary key]
  name text
}

Table assignment_templates {
  id int [primary key]
  course_template_id int [ref: > course_templates.id]
  weight real
  type int // homework, quiz, text, ... enum value
  submission_types text // all allowed file extensions
}

Table user_courses {
  user_id int [ref: > users.id]
  course_id int [ref: > courses.id]
  status int
  role int

  indexes {
    (user_id, course_id) [pk]
  }
}

Table submissions {
  id int [primary key]
  assignment_id int [ref: > assignments.id]
  grader_id int [ref: > users.id]
  filepath text
  submitted_at timestamp
  points_earned real
  grade real
  status int // late, graded, ungraded, ... enum value
}

Table assignments {
  id int [primary key]
  name text
  due_date timestamp
  max_points real
  course_id int [ref: > courses.id]
  weight real
  type int
  submission_types text
}

// for group submissions
Table user_submissions {
  user_id int [ref: > users.id]
  submission_id int [ref: > submissions.id]
}

